css/site.css
/*
	Colors:
		Browns:
			#FAF5F0
			#654
		Blues:
			#CEE
			#8AA
			#699
			#244
		white
		black
*/

@font-face {
	font-family: 'Raleway';
	src: url('../fonts/Raleway.ttf');
}

@font-face {
	font-family: 'PT Serif';
	src: url('../fonts/PT_Serif.ttf');
}

@font-face {
	font-family: 'Source Sans Pro';
	src: url('../fonts/SourceSansPro.ttf');
}

@font-face {
	font-family: 'FontAwesome';
	src: url('../fonts/fontawesome-webfont.eot?v=4.3.0');
	src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.3.0') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2?v=4.3.0') format('woff2'), url('../fonts/fontawesome-webfont.woff?v=4.3.0') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.3.0') format('truetype'), url('../fonts/fontawesome-webfont.svg?v=4.3.0#fontawesomeregular') format('svg');
	font-weight: normal;
	font-style: normal;
}

[class^='fa'] {
  display: inline-block;
  font-family: 'FontAwesome';
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.fa-facebook-square:before {content: '\f082';}
.fa-google-plus-square:before {content: '\f0d4';}
.fa-envelope-square:before {content: '\f199';}
.fa-github-square:before {content: '\f092';}

body {
	margin: 0;
	padding: 0;
	font-family: 'Source Sans Pro';
	color: black;
background: url('/img/grid.png') repeat 0 0;
}

@media only screen and (min--moz-device-pixel-ratio: 2),
only screen and (-o-min-device-pixel-ratio: 2/1),
only screen and (-webkit-min-device-pixel-ratio: 2),
only screen and (min-device-pixel-ratio: 2) {
	body {
		background: url('/img/grid@2X.png') repeat 0 0;
		background-size: 26px 26px;
	}
}

html, body {
	margin: 0;
	padding: 0;
}

#header {
	position: relative;
}

#content {
	margin: 10px;
	position: relative;
}

#footer {
	margin: 10px;
	text-align: center;
}

#titlebar {
	width: 100%;
	height: auto;
	overflow: hidden;
	background-color: #009688;
	border-bottom: 6px solid #004D40;
	/*box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);*/
}

#title {
	margin: 0.3em;
	padding: 0;
	font-size: 3em;
	font-family: 'PT Serif';
	text-align: center;
	color: white;
	float: left;
	text-shadow: 0 3px 4px rgba(0, 0, 0, 0.2);
}

#title:after {
	clear: both;
}

#links a {
	font-size: 24pt;
	text-decoration: none;
}

#links a, #links a:link, #links a:visited, #links a:focus, #links a:active {
	color: #004D40;
}

#links a:hover {
	color: #009688;
}

#links a:active {
	color:  #00BFA5;
}

#menu {
	width: auto;
	height: auto;
	margin: 0 10px;
	padding: 0;
	position: absolute;
	right: 0;
	bottom: 11px;
	display: block;
	color: black;
	list-style-type: none;
	z-index: 100;
}

#menu > li {
	width: auto;
	height: 100%;
	margin-left: 5px;
	padding: 0;
	position: relative;
	float: left;
	background-color: #80CBC4;
	box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.2);
}

#menu a {
	width: 100%;
	height: 100%;
	padding: 10px 15px;
	display: block;
	text-decoration: none;
}

#menu a, #menu a:link, #menu a:visited, #menu a:hover, #menu a:focus, #menu a:active {
	color: inherit;
}

#menu > li:hover {
	background-color: #B2DFDB;
}

.dropdown {
	position: relative;
}

.dropdown:hover > .submenu {
	display: block;
}

.submenu {
	margin: 0;
	padding: 0;
	position: absolute;
	top: 100%;
	left: 0;
	overflow: hidden;
	display: none;
	border-left: 6px solid #00BFA5;
	background-color: white;
	list-style-type: none;
	z-index: 1;
	box-shadow: 0 0 3px 1px rgba(0, 0, 0, 0.2);
}

.submenu li {
	width: 100%;
	height: auto;
	margin-left: 0;
	margin-right: 0;
	clear: left;
}

.submenu > li:hover {
	background-color: #B2DFDB;
}

.contentbox {
	width: auto;
	height: auto;
	margin: 20px 10px;
	padding: 10px;
	display: block;
	overflow: hidden;
	background-color: #EFEBE9;
	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
	/*box-shadow: 0 2px 4px 1px rgba(0, 0, 0, 0.2);*/
}

.contentbox > h2:first-child:before, .contentbox > h3:first-child:before {
	margin: 0;
	padding: 0 10px 0 0;
	font-family: 'FontAwesome';
	color: #795548;
	content: '\f054';
}

.contentbox > h2:first-child {
	margin: 10px 0 20px 0;
}

.contentbox ul {
	list-style-type: none;
}

.contentbox li {
	position: relative;
}

.contentbox li:before {
	font-family: 'FontAwesome';
	content: '\f054';
	color: #795548;
	position: absolute;
 	left: -2.14285714em;
 	width: 2.14285714em;
 	top: 0.14285714em;
 	text-align: center;
}

.column {
	float: left;
	margin: 0 10px;
}

.column:after {
	clear: left;
}

